@@ -3,6 +3,7 @@ import sys
 import pkg_resources
 
 def caller_path(path, level=2):
+    """ Return an absolute path """
     if not os.path.isabs(path):
         module = caller_module(level+1)
         prefix = package_path(module)
